# Segmentacion-Semantica-imagenes-NCCT

./: .gitmodules  README.md  requirements.txt
Hausdorff_K2Tree/: CMakeLists.txt  debug_kamata.cpp  ryu-kamata.cpp
Hausdorff_K2Tree/Logs/: gamma.cpp  gamma.h
Hausdorff_K2Tree/Snapshot/: Snapshot.cpp  Snapshot.h
Hausdorff_K2Tree/Util/: Point.h
Hausdorff_K2Tree/python_module/: CMakeLists.txt  README.md  requirements.txt  setup.cfg  setup.py
Hausdorff_K2Tree/python_module/examples/: unet_example.py
Hausdorff_K2Tree/python_module/hausdorff_k2tree/: __init__.py  pytorch_utils.py
Hausdorff_K2Tree/python_module/src/: python_bindings.cpp
Hausdorff_K2Tree/python_module/tests/: test_hausdorff.py
scripts/: evaluate.py  evaluate_final.py  evaluate_nnunet.py  evaluate_v2.py  generacion_volumenes_nifti.py  preparar_nnunet.py  run_ablations.sh  run_experiments.sh  run_hybrid_exp3.sh  train.py
scripts_hausdorff/: analyze_benchmark_results.py  analyze_scalability.py  benchmark_hausdorff_algorithms.py  compare_benchmarks.py  extract_real_points.py  generate_test_data.py  main_menu.py  scalability_predictions.py  validate_hausdorff_accuracy.py
src/: __init__.py  dataset.py  models.py
