[metadata]
name = hausdorff-k2tree
version = 1.0.0
description = Hausdorff distance algorithms using K2-Tree data structures
long_description = file: README.md
long_description_content_type = text/markdown
author = Tu Nombre
author_email = tu@email.com
license = MIT
url = https://github.com/tu-usuario/hausdorff-k2tree

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.19.0
    torch>=1.7.0

[options.packages.find]
where = .
include = hausdorff_k2tree*